[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/arrow.png" type="Texture" id=1]
[ext_resource path="res://objects/arrow/arrow.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="arrow" type="Area2D"]
z_index = 2
collision_layer = 2147483648
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="arrow_life" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_arrow_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="arrow_life" to="." method="_on_arrow_life_timeout"]
